discussion/kv_engine/144737/144737_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41257: Check for disk failure

Using KVStore to detect

Change-Id: I4cfdf10e2da635eb5c01b67f3cbb14dcb8b09b88

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-02-08 10:11:57.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-08 10:36:14.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6981/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_warmup_test.cc:37:10: error: "filesystem" file not found [clang-diagnostic-error]
#include <filesystem>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6981/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_warmup_test.cc:37:10:
error: "filesystem" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6981/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33452/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_warmup_test.cc(2092): error C2440: "initializing": cannot convert from "std::filesystem::path" to "std::basic_string<char,std::char_traits<char>,std::allocator<char>>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33452/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28778/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/evp_store_warmup_test.cc:37:10:
fatal error: "filesystem" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28778/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7623/ : FAILURE

Compile error at [2021-02-08T10:17:37.177Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_warmup_test.cc:2092:49:
error: "current_path" is unavailable: introduced in macOS 10.15
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7623/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8702/ : FAILURE

Compile error at [2021-02-08T10:14:55.842Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_warmup_test.cc:37:10:
fatal error: filesystem: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8702/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16459/ : FAILURE

Compile error at [2021-02-08T10:18:30.459Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_warmup_test.cc:37:10:
fatal error: "filesystem" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16459/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8570/ : FAILURE

Compile error at [2021-02-08T10:15:27.467Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_warmup_test.cc:37:10:
fatal error: filesystem: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8570/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8914/ : FAILURE

Compile error at [2021-02-08T10:22:13.859Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_warmup_test.cc:37:10:
fatal error: "filesystem" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8914/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5518/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
